# ufs

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: python-package.yml
ufs/: base.py  exceptions.py
ufs/posix/: posix_common.py  posix_directory.py  posix_directory_prefix.py  posix_file.py  posix_filesystem.py
ufs/s3/: s3_common.py  s3_directory.py  s3_directory_prefix.py  s3_file.py  s3_filesystem.py
